Bug fixed